--- a/src/app/modules/container/container.component.css
+++ b/src/app/modules/container/container.component.css
@@ -22,6 +22,33 @@
 	z-index: 2000;
 }
 .overlay .progress {
+	
+}
+
+.loading-progress {
+	position: fixed;
+	width: 100vw;
+
+	top: 0;
+	left: 0;
+
+	z-index: 2001;
+
 	border-radius: 0;
-	margin: 0;
+	margin-top: 0;
+}
+
+.initialize-progress {
+	position: fixed;
+	width: 100vw;
+	height: 100vh;
+
+	top: 0;
+	left: 0;
+
+	z-index:2002;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
