--- a/src/app/modules/input/input.template.html
+++ b/src/app/modules/input/input.template.html
@@ -1,4 +1,9 @@
-<div class="input-field">
-    <input #input [class]="mode" [id]="id" type="text" (focus)="focused = true" (blur)="focused = false" [value]="text ? text : ''" (input)="valueChanged.emit($event.target.value)">
+<div *ngIf="!placeholder" class="input-field">
+    <input #input [id]="id" [type]="type || 'text'" (focus)="focused = true" (blur)="focused = false" [value]="text || null" (input)="valueChanged.emit($event.target.value)">
+    <label *ngIf="label" [class]="text || focused ? 'active' : ''" [for]="id">{{ label }}</label>
+</div>
+
+<div *ngIf="placeholder" class="input-field">
+    <input #input [id]="id" [type]="type || 'text'" [placeholder]="placeholder || ''" (focus)="focused = true" (blur)="focused = false" [value]="text || null" (input)="valueChanged.emit($event.target.value)">
     <label *ngIf="label" [class]="text || focused ? 'active' : ''" [for]="id">{{ label }}</label>
 </div>
