--- a/src/styles.css
+++ b/src/styles.css
@@ -18,3 +18,12 @@ keto-action-icon {
 .greyToast {
 	background: grey;
 }
+
+.header {
+	color: #ee6e73;
+    font-weight: 300;
+}
+
+.has-bottom-border {
+	border-bottom: 1px solid rgba(0,0,0,0.14);
+}
